# LearnBasics

./: .gitignore  README.md  SUMOforDummies.md  argparse.md  duckdb_expert_guide.md  learn-monte-carlo-simulation.ipynb  learn-operation-research.ipynb  learn-polars.ipynb  learn-sympy.ipynb  learnpca.ipynb  learnquant.ipynb  magicIpython.md  main.py  polars_expert_guide.md  pyproject.toml  sumo_expert_guide.md  threadMultProcessing.py  traci_expert_guide.md
Bash/: README.md  bash_expert_guide.sh  xargs.md
DOTFILES/: aliases.md
Gaming/: README.md  game_math_toolkit.py  slot_game_example.py
HuggingFace/: huggingface_mastery_guide.md
LearnCMake/: cmake_expert_guide.md
LearnCMake/my_project/: CMakeLists.txt
LearnCMake/my_project/src/: main.cpp
LearnSUMO/Baby/: README.md  network.net.xml  routes.rou.xml  run_simulation.py
LearnSUMO/Baby/config/: simulation.sumocfg
LearnSUMO/Baby/data/: esslingen.osm
OpenGL/: opengl_expert_guide.md
OsmiumProject/: README.md  main.py  pyproject.toml
Quants/: blockchain_engineer_guide.md  quant_career_guide.md
Scipy/: README.md  kdtree.py
Shapely/: wktwkb.py
asyncProgram/: README.md
learnFastAPI/: fastapi_expert_guide.md  main.py
learnSQLite/: README.md  example.db  fetch.md  fetching.py  sqlite3_crash_course.py  sqlite3_polars_integration.py  withpolars.md
learnUV/: learn.md
logging/: README.md  loggingTest.py
lreflex/: app.py  main.py  pyproject.toml  reflex_expert_guide.md
lreflex/.web/: package.json  reflex.json
